tests/baselines/reference/parseCommaSeperatedNewlineNumber.errors.txt
tests/cases/compiler/parseCommaSeperatedNewlineNumber.ts(1,2): error TS2304: Cannot find name 'a'.


==== tests/cases/compiler/parseCommaSeperatedNewlineNumber.ts (1 errors) ====
    (a,
     ~
!!! error TS2304: Cannot find name 'a'.
    1)